--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+
+
 body {
     background-color: #0A0A0A;
+}
+
+.neon-red-header {
+    color: #FD1C03;
+    font-family: 'Roboto', sans-serif;
 }
