--- a/index.css
+++ b/index.css
@@ -8,13 +8,11 @@ body {
 }
 
 .navbar {
-    background-color: #333; /* Black background color */
-    position: fixed; /* Make it  stick/fixed */
-    top: 0; /* Stay on top */
-    width: 100%; /* Full width */
-    transition: top 0.3s; /* Transition effect when sliding down (and up) */
-
-    
+    background-color: #222222;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    transition: top 0.3s;
 }
 
 ul {
@@ -45,6 +43,10 @@ ul li {
 
 ul li:hover {
 	background: #d6c773;
+}
+
+.main {
+    top:100px;
 }
 
 .neon-red-header {
