--- a/index.css
+++ b/index.css
@@ -45,8 +45,8 @@ ul li:hover {
 	background: #d6c773;
 }
 
-.main {
-    padding-top:100px;
+#main {
+    padding-top:120px;
 }
 
 .neon-red-header {
