--- a/index.css
+++ b/index.css
@@ -7,12 +7,18 @@ body {
     background-color: #0A0A0A;
 }
 
-.navbar {
+.navbar-fixed {
     background-color: #222222;
     position: fixed;
     top: 0;
     width: 100%;
     transition: top 0.3s;
+}
+
+.navbar-scroll {
+    background-color: #222222;
+    position: fixed;
+    top: 82%
 }
 
 ul {
@@ -43,10 +49,6 @@ ul li {
 
 ul li:hover {
 	background: #d6c773;
-}
-
-#main {
-    padding-top:120px;
 }
 
 .neon-red-header {
