--- a/index.css
+++ b/index.css
@@ -17,8 +17,7 @@ body {
 
 .navbar-scroll {
     background-color: #222222;
-    position: fixed;
-    top: 82%
+    width: 100%;
 }
 
 ul {
@@ -59,4 +58,12 @@ ul li:hover {
     animation: glow 1s ease-in-out infinite alternate;
     font-size: 80px;
     text-shadow: 0 0 10px #ccc, 0 0 20px #ccc, 0 0 30px #e62323, 0 0 40px #e62323;
+}
+
+#main {
+    height: 82%;
+}
+
+#about {
+    top:100%
 }
