--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@
 body {
 	background-color: #212121;
 	margin: 0;
+	overflow-x: hidden;
 }
 
 .content {
@@ -88,7 +89,7 @@ ul li:hover {
 		0 0 40px #e62323;
 }
 
-#main {
+#home {
 	height: 88%;
 }
 
@@ -99,14 +100,15 @@ ul li:hover {
 .vl {
 	border-left: 6px solid #dddddd;
 	border-radius: 3px;
-	height: 600px;
+	height: 110vh;
 	margin-left: 50%;
 	float: left;
 }
 
 .wrapper {
 	background: linear-gradient(60deg, #420285, #08bdbd);
-	height: 100%;
+	margin-top: 35%;
+	height: 110vh;
 	width: 100%;
 	display: flex;
 	justify-content: center;
@@ -251,6 +253,19 @@ ul li:hover {
 	}
 }
 
-#projects {
-	background-color: #555;
+#project-header {
+	width: 90vw;
+}
+
+.sky {
+	background-image: url("assets/images/sky.svg");
+	background-color: rgba(33, 33, 33, 1);
+	background-blend-mode: darken;
+}
+
+.project-content {
+	border: 10px solid #850200;
+	box-shadow: 0 0 10px #850200;
+	border-radius: 10px;
+	background-color: #050515;
 }
