--- a/index.css
+++ b/index.css
@@ -16,6 +16,11 @@ body {
 	background-color: #212121;
 	margin: 0;
 	overflow-x: hidden;
+	user-zoom: fixed;
+}
+
+html {
+	overflow-x: hidden;
 }
 
 .content {
